# oofem_dd

./: .gitignore  CMakeLists.txt
doc/elementlibmanual/: elementlibmanual.4ct  elementlibmanual.4tc  elementlibmanual.css  elementlibmanual.idv  elementlibmanual.lg  elementlibmanual.xref
src/dd/: CMakeLists.txt  betweenpoints.h  complex.cpp  complex.h  ddcounter.cpp  ddcounter.h  dderror.h  ddobject.h  domain.cpp  domain.h  forcecache.cpp  forcecache.h  functorcache.h  hashedregistrable.h  point.cpp  point.h  registration.h  slipplane.cpp  slipplane.h  slipsystem.cpp  slipsystem.h  timemanager.cpp  timemanager.h  vector.h
src/dd/feminterface/: feminterface.cpp  feminterface.h  oofeminterface.cpp  oofeminterface.h
src/dd/forcefunctor/: forcefunctor.h  fromdislocations.cpp  fromdislocations.h  fromfem.cpp  fromfem.h  fromfemmock.cpp  fromfemmock.h
src/dd/point/: dislocation.cpp  dislocation.h  obstacle.cpp  obstacle.h  source.cpp  source.h  virtualdislocation.cpp  virtualdislocation.h
src/dd/registrable/: explicitpointregistrable.cpp  explicitpointregistrable.h  hashedregistrable.h  registrable.h  singletonregistrable.h
src/oofemlib/: CMakeLists.txt  internalstatetype.h  manualboundarycondition.C  manualboundarycondition.h  nrsolver.C  prescribedgradient.C  prescribedgradienthomogenization.h
src/sm/: CMakeLists.txt
src/sm/Elements/: AbaqusUserElement.h  htselement.h  lattice2d.h  lumpedmasselement.h  quad1platesubsoil.h  springelement.h  structural2delement.C  structural2delement.h  structural3delement.C  structural3delement.h  structuralelement.h  trwarp.h  (+2 more)
(+64 files in other folders)
